--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section
       class="skrollable u-clearfix u-gradient u-parallax u-section-1"
       id="sec-f9ea"
-      style="background-position: 0; padding-bottom: 50px"
+      style="background-position: center; padding-bottom: 50px; padding-top: 0"
     >
       <div class="u-clearfix u-sheet u-sheet-1">
         <img
