--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           >X</a
         >
         <a
-          href="https://www.dextools.io/app/en/ether/pair-explorer/0x82c994476dbe08c39e5d67675bb07532bc1230d0"
+          href="chartlink"
           class="u-border-4 u-border-hover-black u-border-white u-btn u-btn-round u-button-style u-gradient u-hover-black u-hover-feature u-none u-radius-20 u-btn-3"
           target="_blank"
           >DEXTOOLS</a
